--- a/html/static-job-clon/static.html
+++ b/html/static-job-clon/static.html
@@ -12,31 +12,31 @@
     <link href="/styles/main.css" rel="stylesheet">
 </head>
 <body class="bg-liGraCy">
-    <head>
-        <section class="bg-desaDc">
-            <img src="./images/bg-header-desktop.svg">
+    <head class="container-sm ">
+        <section class="bg-desaDc ">
+            <img class="col-12" src="./images/bg-header-desktop.svg">
         </section>
     </head>
     <main>
         <section class="d-flex flex-column align-items-center justify-content-center">
-            <article class="flex-row bg-white m-3 p-2 w-75 d-flex">
+            <article class="flex-xl-row bg-white m-3 p-2 w-75 d-flex flex-column">
                 <div class="d-flex align-items-center">
                     <a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a>
                 </div> 
-                <article class="flex-col d-flex flex-grow-1">
+                <article class="flex-col d-flex flex-grow-1 m-3">
                     <div class="flex-row d-flex">
                         <button class="btn btn-link text-decoration-none text-desaDc">Photosnap</button>
                         <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
                         <button class="btn btn-link bg-veDark text-white rounded-pill text-decoration-none"> FEATURED</button>
                     </div>
                     <h1>Senior Frontend Developer</h1>
-                    <div class="flex-row">
+                    <div class="flex-row d-flex">
                         <p class="text-muted">1d ago</p>
                         <p class="text-muted">Full Time </p>
                         <p class="text-muted">USA only</p>
                     </div>
                 </article>
-                <article class="d-flex  align-items-center ">
+                <article class="d-flex  align-items-center flex-wrap">
                     <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Senior</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">HTML</button></div>
@@ -44,11 +44,11 @@
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
                 </article>   
             </article>
-            <article class="flex-row d-flex bg-white m-3 p-2 w-75">
+            <article class="flex-xl-row bg-white m-3 p-2 w-75 d-flex flex-column">
                 <div class="d-flex align-items-center">
                     <a href="#" class="align-self-center"><img src="./images/manage.svg"></a>
                 </div> 
-                <article class="flex-col d-flex flex-grow-1">
+                <article class="flex-col d-flex flex-grow-1 m-3">
                     <div class="flex-row">
                         <button class="btn btn-link text-decoration-none text-desaDc">Manage</button>
                         <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
@@ -61,18 +61,18 @@
                         <p class="text-muted">USA only</p>
                     </div>
                 </article>
-                <article class="d-flex justify-content-center d-flex align-items-center ">
+                <article class="d-flex  align-items-center flex-wrap">
                     <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Fullstack</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Midweight</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Python</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">React</button></div>            
                 </article>   
             </article>
-            <article class="flex-row bg-white m-3 p-2 w-75">
+            <article class="flex-xl-row bg-white m-3 p-2 w-75 d-flex flex-column">
                 <div class="d-flex align-items-center">
                     <a href="#" class="align-self-center"><img src="./images/account.svg"></a>
                 </div> 
-                <article class="flex-col d-flex flex-grow-1">
+                <article class="flex-col d-flex flex-grow-1 m-3">
                     <div class="flex-row">
                         <button class="btn btn-link text-decoration-none text-desaDc">Account</button>
                         <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
@@ -85,7 +85,7 @@
                         <p class="text-muted">USA only</p>
                     </div>
                 </article>
-                <article class="d-flex justify-content-center d-flex align-items-center">
+                <article class="d-flex  align-items-center flex-wrap">
                     <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Junior</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">React</button></div>
@@ -93,11 +93,11 @@
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
                 </article>   
             </article>
-            <article class="flex-row bg-white m-3 p-2 w-75">
+            <article class="flex-xl-row bg-white m-3 p-2 w-75 d-flex flex-column">
                 <div class="d-flex align-items-center">
                     <a href="#" class="align-self-center"><img src="./images/myhome.svg"></a>
                 </div> 
-                <article class="flex-col d-flex flex-grow-1">
+                <article class="flex-col d-flex flex-grow-1 m-3">
                     <div class="flex-row">
                         <button class="btn btn-link text-decoration-none text-desaDc">MyHome</button>                    
                     </div>
@@ -108,18 +108,18 @@
                         <p class="text-muted">USA only</p>
                     </div>
                 </article>
-                <article class="d-flex justify-content-center d-flex align-items-center">
+                <article class="d-flex  align-items-center flex-wrap">
                     <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Junior</button></div>                
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">CSS</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
                 </article>   
             </article>
-            <article class="flex-row bg-white m-3 p-2 w-75">
+            <article class="flex-xl-row bg-white m-3 p-2 w-75 d-flex flex-column">
                 <div class="d-flex align-items-center">
                     <a href="#" class="align-self-center"><img src="./images/loop-studios.svg"></a>
                 </div> 
-                <article class="flex-col d-flex flex-grow-1">
+                <article class="flex-col d-flex flex-grow-1 m-3">
                     <div class="flex-row">
                         <button class="btn btn-link text-decoration-none text-desaDc">Loop Studios</button>                    
                     </div>
@@ -130,7 +130,7 @@
                         <p class="text-muted">Wordwide</p>
                     </div>
                 </article>
-                <article class="d-flex justify-content-center d-flex align-items-center">
+                <article class="d-flex  align-items-center flex-wrap">
                     <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Midweight</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Sass</button></div>
@@ -138,11 +138,11 @@
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
                 </article>   
             </article>
-            <article class="flex-row bg-white m-3 p-2 w-75">
+            <article class="flex-xl-row bg-white m-3 p-2 w-75 d-flex flex-column">
                 <div class="d-flex align-items-center">
                     <a href="#" class="align-self-center"><img src="./images/faceit.svg"></a>
                 </div> 
-                <article class="flex-col d-flex flex-grow-1">
+                <article class="flex-col d-flex flex-grow-1 m-3">
                     <div class="flex-row">
                         <button class="btn btn-link text-decoration-none text-desaDc">Facelt</button>                    
                     </div>
@@ -153,18 +153,18 @@
                         <p class="text-muted">Wordwide</p>
                     </div>
                 </article>
-                <article class="d-flex justify-content-center d-flex align-items-center">
+                <article class="d-flex  align-items-center flex-wrap">
                     <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Backend</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Junior</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Ruby</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">RoR</button></div>                
                 </article>   
             </article>
-            <article class="flex-row bg-white m-3 p-2 w-75">
+            <article class="flex-xl-row bg-white m-3 p-2 w-75 d-flex flex-column">
                 <div class="d-flex align-items-center">
                     <a href="#" class="align-self-center"><img src="./images/shortly.svg"></a>
                 </div> 
-                <article class="flex-col d-flex flex-grow-1">
+                <article class="flex-col d-flex flex-grow-1 m-3">
                     <div class="flex-row">
                         <button class="btn btn-link text-decoration-none text-desaDc">Shorty</button>                
                     </div>
@@ -175,7 +175,7 @@
                         <p class="text-muted">Wordwide</p>
                     </div>
                 </article>
-                <article class="d-flex justify-content-center d-flex align-items-center">
+                <article class="d-flex  align-items-center flex-wrap">
                     <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Junior</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">HTML</button></div>
@@ -183,11 +183,11 @@
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
                 </article>   
             </article>
-            <article class="flex-row bg-white m-3 p-2 w-75">
+            <article class="flex-xl-row bg-white m-3 p-2 w-75 d-flex flex-column">
                 <div class="d-flex align-items-center">
                     <a href="#" class="align-self-center"><img src="./images/insure.svg"></a>
                 </div> 
-                <article class="flex-col d-flex flex-grow-1">
+                <article class="flex-col d-flex flex-grow-1 m-3">
                     <div class="flex-row">
                         <button class="btn btn-link text-decoration-none text-desaDc">Insure</button>                    
                     </div>
@@ -198,7 +198,7 @@
                         <p class="text-muted">USA only</p>
                     </div>
                 </article>
-                <article class="d-flex justify-content-center d-flex align-items-center">
+                <article class="d-flex  align-items-center flex-wrap">
                     <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Junior</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Vue</button></div>
@@ -206,11 +206,11 @@
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
                 </article>   
             </article>
-            <article class="flex-row bg-white m-3 p-2 w-75">
+            <article class="flex-xl-row bg-white m-3 p-2 w-75 d-flex flex-column">
                 <div class="d-flex align-items-center">
                     <a href="#" class="align-self-center"><img src="./images/eyecam-co.svg"></a>
                 </div> 
-                <article class="flex-col d-flex flex-grow-1">
+                <article class="flex-col d-flex flex-grow-1 m-3">
                     <div class="flex-row">
                         <button class="btn btn-link text-decoration-none text-desaDc">Eyecam Co.</button>                    
                     </div>
@@ -221,7 +221,7 @@
                         <p class="text-muted">Wordwide</p>
                     </div>
                 </article>
-                <article class="d-flex justify-content-center d-flex align-items-center">
+                <article class="d-flex  align-items-center flex-wrap">
                     <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Fullstack</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Midweigtgh</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Django</button></div>
@@ -229,11 +229,11 @@
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
                 </article>   
             </article>
-            <article class="flex-row bg-white m-3 p-2 w-75">
+            <article class="flex-xl-row bg-white m-3 p-2 w-75 d-flex flex-column">
                 <div class="d-flex align-items-center">
                     <a href="#" class="align-self-center"><img src="./images/the-air-filter-company.svg"></a>
                 </div> 
-                <article class="flex-col d-flex flex-grow-1">
+                <article class="flex-col d-flex flex-grow-1 m-3">
                     <div class="flex-row">
                         <button class="btn btn-link text-decoration-none text-desaDc">The Air Filter Company</button>                    
                     </div>
@@ -244,7 +244,7 @@
                         <p class="text-muted">Wordwide</p>
                     </div>
                 </article>
-                <article class="d-flex justify-content-center d-flex align-items-center">
+                <article class="d-flex  align-items-center flex-wrap">
                     <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Junior</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">React</button></div>
