--- a/index.html
+++ b/index.html
@@ -6,40 +6,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenido</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
-<body>
-    <main>
-        
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-              <h1 class="display-4">Mis actividades</h1>
-              <p class="lead">Bienvenido a mi perfil.</p>
+<body class="bg-bGb">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="./index.html">Inicio</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="./html/cv/cvMiguel.html">Mi cv<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+              Clones
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="./html/googleClon/google.html">Google</a>
+              <a class="dropdown-item" href="./html/neflixClon/netflix.html">Netflix</a>
+              <a class="dropdown-item" href="./html/neflixClon/netflix.html">NFT</a>
+              <a class="dropdown-item" href="./html/devToClon/devTo.html">DevTo</a>
+              <a class="dropdown-item" href="./html/static-job-clon/static.html">Static</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="./html/pokeCards/pokemonCartas.html">Pokes shinys</a>
+              <a class="dropdown-item" href="./html/flags/banderas.html">Banderas</a>
             </div>
-          </div>
-        <ul class="nav">
+          </li>
+        </ul>
+      </div>
+    </nav>  
+    <main>
+        <ul class="nav m-5 p-5">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./html/googleClon/google.html">Google Clon</a>
+              <a class="nav-link active rounded-pill bg-liGraCy m-1" aria-current="page" href="./html/googleClon/google.html">Google Clon</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./html/neflixClon/netflix.html">Netflix Clon</a>
+                <a class="nav-link active rounded-pill bg-liGraCy m-1" aria-current="page" href="./html/neflixClon/netflix.html">Netflix Clon</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./html/nftClon/nft.html">NFT Clon</a>
+                <a class="nav-link active rounded-pill bg-liGraCy m-1" aria-current="page" href="./html/nftClon/nft.html">NFT Clon</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./html/pokeCards/pokemonCartas.html">Cartas Pokemon</a>
+                <a class="nav-link active rounded-pill bg-liGraCy m-1" aria-current="page" href="./html/pokeCards/pokemonCartas.html">Cartas Pokemon</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./html/flags/banderas.html">Banderas</a>
+                <a class="nav-link active rounded-pill bg-liGraCy m-1" aria-current="page" href="./html/flags/banderas.html">Banderas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./html/devToClon/devTo.html">DevTo Clon</a>
+                <a class="nav-link active rounded-pill bg-liGraCy m-1" aria-current="page" href="./html/devToClon/devTo.html">DevTo Clon</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./html/reactClon/react.html">React Clon</a>
+                <a class="nav-link active rounded-pill bg-liGraCy m-1" aria-current="page" href="./html/reactClon/react.html">React Clon</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./html/static-job-clon/static.html">Static Clon</a>
+                <a class="nav-link active rounded-pill bg-liGraCy m-1" aria-current="page" href="./html/static-job-clon/static.html">Static Clon</a>
               </li>
           </ul>
         <hr />
