--- a/html/devToClon/createAcount.html
+++ b/html/devToClon/createAcount.html
@@ -5,21 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link href="./styles/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="icon" href="https://dev-to-uploads.s3.amazonaws.com/uploads/logos/resized_logo_UQww2soKuUsjaOGNB38o.png">
 </head>
 <body>
-    <main>
-        <nav class="flexRow">   
-            <a href="" class="imgDev"></a>
-            <section class="barSear" >
-                
-                <input type="text" placeholder="Search...">
-                <a href="" class="iconSear" ></a>
-            </section>
-            <section></section>
+    <nav class="bg-white fixed-top d-flex flex-row d-flex justify-content-xl-around justify-content-md-between justify-content-sm-start justify-content-start">
+        <form class="form-inline">
+              <a class="navbar-brand" href="#">
+                  <img src="https://dev-to-uploads.s3.amazonaws.com/uploads/logos/resized_logo_UQww2soKuUsjaOGNB38o.png" width="50" height="40" alt="">
+                </a>
+              <input class="form-control" style="width: 402px;" type="search" placeholder="Search" aria-label="Search">
+              <a href="" class="ml-1"><i class="bi bi-search"></i></a>       
+        </form>
+          <form class="form-inline" >
+            <button type="button" class="btn btn-light">Log in</button>
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>           
+          </form>      
         </nav>
+    <main>
         
     </main>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
