--- a/index.html
+++ b/index.html
@@ -1,78 +1,82 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenido</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles/main.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
-<body class="bg-bGb">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="./index.html">Inicio</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="./html/cv/cvMiguel.html">Mi cv<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-              Clones
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="./html/googleClon/google.html">Google</a>
-              <a class="dropdown-item" href="./html/neflixClon/netflix.html">Netflix</a>
-              <a class="dropdown-item" href="./html/neflixClon/netflix.html">NFT</a>
-              <a class="dropdown-item" href="./html/devToClon/devTo.html">DevTo</a>
-              <a class="dropdown-item" href="./html/static-job-clon/static.html">Static</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="./html/pokeCards/pokemonCartas.html">Pokes shinys</a>
-              <a class="dropdown-item" href="./html/flags/banderas.html">Banderas</a>
-            </div>
-          </li>
-        </ul>
+<body style="background-color: #333;">
+    
+  <header>
+    <div class="bg-dark collapse" id="navbarHeader" style="">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-8 col-md-7 py-4">
+            <h4 class="text-white">Acerca</h4>
+            <p class="text-muted">Experiencia en soluciones de TI con más de 5 años en redes y un
+              año en desarrollo, con conocimientos en redes lan y man,
+              ciberseguridad, cctv, c#, css, html,bootstrap, mantenimiento a
+              equipos de TI, servidores, switches, bases de datos, manejo de
+              personal.</p>
+          </div>
+          <div class="col-sm-4 offset-md-1 py-4">
+            <h4 class="text-white">Contacto</h4>
+            <ul class="list-unstyled">
+              <li><a href="https://www.linkedin.com/in/miguel-angel-moreno-contreras-708940136/" class="text-white">Linkedin</a></li>
+              <li><a href="https://github.com/2112miguel" class="text-white">Github</a></li>
+              <li><a href="#" class="text-white">Email me</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
-    </nav>  
-    <main>
-        <ul class="nav m-5 p-5">
-            <li class="nav-item">
-              <a class="nav-link active rounded-pill bg-liGraCy m-1" aria-current="page" href="./html/googleClon/google.html">Google Clon</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active rounded-pill bg-liGraCy m-1" aria-current="page" href="./html/neflixClon/netflix.html">Netflix Clon</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active rounded-pill bg-liGraCy m-1" aria-current="page" href="./html/nftClon/nft.html">NFT Clon</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active rounded-pill bg-liGraCy m-1" aria-current="page" href="./html/pokeCards/pokemonCartas.html">Cartas Pokemon</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active rounded-pill bg-liGraCy m-1" aria-current="page" href="./html/flags/banderas.html">Banderas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active rounded-pill bg-liGraCy m-1" aria-current="page" href="./html/devToClon/devTo.html">DevTo Clon</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active rounded-pill bg-liGraCy m-1" aria-current="page" href="./html/reactClon/react.html">React Clon</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active rounded-pill bg-liGraCy m-1" aria-current="page" href="./html/static-job-clon/static.html">Static Clon</a>
-              </li>
-          </ul>
-        <hr />
-        
-        <h2>
-            Actividades pasadas
-        </h2>
-            <a href=""></a>
-    </main>
-
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-</body>
+    </div>
+    <div class="navbar navbar-dark bg-dark shadow-sm">
+      <div class="container">
+        <a href="index.html" class="navbar-brand d-flex align-items-center">
+          <i class="bi bi-folder text-white"></i>
+          <strong>PORTAFOLIO</strong>
+        </a>
+        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </div>
+  </header>
+  
+  <main>
+  
+    <section class="py-5 text-center container" >
+      <div class="row py-lg-5">
+        <div class="col-lg-6 col-md-8 mx-auto">
+          <h1 class="fw-light text-white">Portafolio</h1>
+          <p class="lead text-white">Mi portafilio de proyectos es espacio en donde comparto mis conocimientos y habilidades que he adquirido con el tiempo en CSS, html y Javascript</p>
+        </div>
+      </div>
+    </section>
+  
+   
+      <div class="container">
+        <a href="./html/static-job-clon/static.html"></a>
+        <div id="contenedor" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        </div>
+      </div>
+  </main>
+  
+  <footer class="text-muted py-5">
+    <div class="container">
+      <p class="float-end mb-1">
+        <a href="#">Back to top</a>
+      </p>
+      <p class="mb-1">Album example is © Bootstrap, but please download and customize it for yourself!</p>
+      <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
+    </div>
+  </footer>
+  
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="./js/main.js"></script>
+  </body>
 </html>
