--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   
    
       <div class="container">
-        <a href="./html/static-job-clon/static.html"></a>
+        <a href="./img/static Clon.jpg"></a>
         <div id="contenedor" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         </div>
       </div>
