--- a/html/static-job-clon/static.html
+++ b/html/static-job-clon/static.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap" rel="stylesheet">
     <title>Document</title>
     <link href="/styles/bootstrap/node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-    <link href="/styles/main.css" rel="stylesheet">
+    <link href="../../styles/main.css" rel="stylesheet">
 </head>
 <body class="bg-liGraCy">
     <head class="container-sm ">
