--- a/html/devToClon/devTo.html
+++ b/html/devToClon/devTo.html
@@ -14,8 +14,7 @@
 <body class="bg-light ">
     <main >
       <!--Nav bar principal-->
-        <nav class="navbar navbar navbar-light bg-white fixed-top d-flex flex-row d-flex justify-content-xl-around justify-content-md-between justify-content-sm-start justify-content-start">
-          
+        <nav class="navbar navbar-light bg-white fixed-top d-flex flex-row d-flex justify-content-xl-around justify-content-md-around justify-content-sm-start justify-content-start">
           <form class="form-inline">
                 <a class="navbar-brand" href="#">
                     <img src="https://dev-to-uploads.s3.amazonaws.com/uploads/logos/resized_logo_UQww2soKuUsjaOGNB38o.png" width="50" height="40" alt="">
@@ -327,7 +326,7 @@
                   
             </div>
             <!--Ultima celda de la lista-->
-            <div class="p-2 bd-highlight">
+            <div id="aside" class="p-2 bd-highlight">
               <!--Lista de links-->
               <article class="list-group">
                 <section class="d-flex flex-row justify-content-between">
