--- a/html/static-job-clon/static.html
+++ b/html/static-job-clon/static.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap" rel="stylesheet">
     <title>Document</title>
-    <link href="/styles/bootstrap/node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="../../styles/bootstrap/node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <link href="../../styles/main.css" rel="stylesheet">
 </head>
 <body class="bg-liGraCy">
