--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body style="background-color: #333;">
     
   <header>
-    <div class="bg-dark collapse" id="navbarHeader" style="">
+    <div class="bg-dark collapse" id="navbarHeader" >
       <div class="container">
         <div class="row">
           <div class="col-sm-8 col-md-7 py-4">
